--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
     <title>Dela Cruz Resume</title>
 </head>
 <body>
-    
+    <div class="container h1">My First Website</div>
+    <p> ipsum dolor sit amet consectetur adipisicing elit. Temporibus qui error doloremque ullam dolor, aliquam corporis asperiores repellendus delectus aliquid explicabo voluptates odit iure recusandae minus odio expedita suscipit veniam!</p>
 </body>
 </html>
