--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <form class="row g-3">
-        <h3 align="center" style="font-weight: bold;">PERSONAL INFORMATION</h3>
+        <h3 style="font-weight: bold;">PERSONAL INFORMATION</h3>
   <div class="col-md-4">
     <div class="input-group">
     <label for="inputEmail4" class="form-label">First Name</label></div>
@@ -101,7 +101,7 @@
     <input type="text" class="form-control" id="inputAddress"></div>
   </div>
 
-  <h3 align="center" style="font-weight: bold;">JOB INFORMATION</h3>
+  <h3 style="font-weight: bold;">JOB INFORMATION</h3>
 
 
   <div class="col-8">
