--- a/registration/index.html
+++ b/registration/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
+    <div class="border">
     <form action="#" method="post">
-        <h3 align="center" style="font-weight: bold;">PERSONAL INFORMATION</h3>
+        <h4 align="center" style="font-weight: bold; font-size: 30px;">New Employee Registration</h4>
+        <h3 align="center" style="font-weight: bold;">Personal Information</h3>
         <div class="name-row">
             <div class="input-group">
         <label for="first">First Name: </label>
@@ -76,7 +78,7 @@
         <input type="text" placeholder="Ex. 123 Sampaguita St., Brgy. Malinis, Quezon City"> 
         </div>
 
-        <h3 align="center" style="font-weight: bold;">JOB INFORMATION</h3>
+        <h3 align="center" style="font-weight: bold;">Job Information</h3>
 
         <div class="input-group">
         <label for="id">Employee ID:</label>
@@ -131,6 +133,6 @@
 
         <button type="submit">Submit</button>
 
-    </form>
+    </form></div>
 </body>
 </html>
