--- a/product_page_sample/index.html
+++ b/product_page_sample/index.html
@@ -26,7 +26,7 @@
           </div>
         </div>
         <button class="custom-btn">HOME</button>
-        <button class="custom-btn">ABOUT US</button>
+        <a href="#bot-banner"><button class="custom-btn">ABOUT US</button></a>
         <button class="custom-btn" id="shop-button" onclick="showShop()">SHOP<span class="arrow">▼</span></button>
       </div>
     </div>
@@ -319,7 +319,7 @@
     <img src="logo/pokemon.png">
   </div>
 
-  <div class="bot-banner">
+  <div id="bot-banner">
     
      <div class="row">
       <div class="list">
