--- a/product_page_sample/index.html
+++ b/product_page_sample/index.html
@@ -230,7 +230,7 @@
       </div>
 
       <div class="box">
-        <img src="items/item12.png" width="350px">
+        <img src="items/item12.PNG" width="350px">
         <div class="card-body">
           <h3>Max Mushroom</h3>
           <button class="custom-btn2" style="margin-top: 29px;">₱289.00</button>
