--- a/product_page_sample/index.html
+++ b/product_page_sample/index.html
@@ -134,7 +134,7 @@
      <h5>Items</h5>
     <div class="items">
       <div class="box">
-        <img src="items/item.png" width="350px">
+        <img src="items/item.PNG" width="350px">
         <div class="card-body">
           <h3>Max Particle Packs + Remove Raid Packs</h3>
           <button class="custom-btn2" style="margin-top: 29px;">₱88.00</button>
@@ -142,7 +142,7 @@
       </div>
 
       <div class="box">
-        <img src="items/item1.png" width="350px">
+        <img src="items/item1.PNG" width="350px">
         <div class="card-body">
           <h3>3 Max Particle Packs + 3 Remove Raid Packs</h3>
           <button class="custom-btn2" style="margin-top: 29px;">₱235.00</button>
@@ -150,7 +150,7 @@
       </div>
 
       <div class="box">
-        <img src="items/item2.png" width="350px">
+        <img src="items/item2.PNG" width="350px">
         <div class="card-body">
           <h3>Lucky Egg</h3>
           <button class="custom-btn2" style="margin-top: 29px;">₱149.00</button>
@@ -158,7 +158,7 @@
       </div>
 
       <div class="box">
-        <img src="items/item3.png" width="350px">
+        <img src="items/item3.PNG" width="350px">
         <div class="card-body">
           <h3>Star Piece</h3>
           <button class="custom-btn2" style="margin-top: 29px;">₱175.00</button>
@@ -166,7 +166,7 @@
       </div>
 
       <div class="box">
-        <img src="items/item4.png" width="350px">
+        <img src="items/item4.PNG" width="350px">
         <div class="card-body">
           <h3>Remote Raid Pass</h3>
           <button class="custom-btn2" style="margin-top: 29px;">₱88.00</button>
@@ -174,7 +174,7 @@
       </div>
 
       <div class="box">
-        <img src="items/item5.png" width="350px">
+        <img src="items/item5.PNG" width="350px">
         <div class="card-body">
           <h3>Pokémon Storage</h3>
           <button class="custom-btn2" style="margin-top: 29px;">₱59.00</button>
@@ -182,7 +182,7 @@
       </div>
 
       <div class="box">
-        <img src="items/item6.png" width="350px">
+        <img src="items/item6.PNG" width="350px">
         <div class="card-body">
           <h3>Item Bag</h3>
           <button class="custom-btn2" style="margin-top: 29px;">₱59.00</button>
@@ -190,7 +190,7 @@
       </div>
 
       <div class="box">
-        <img src="items/item7.png" width="350px">
+        <img src="items/item7.PNG" width="350px">
         <div class="card-body">
           <h3>Egg Incubator</h3>
           <button class="custom-btn2" style="margin-top: 29px;">₱88.00</button>
@@ -206,7 +206,7 @@
       </div>
 
       <div class="box">
-        <img src="items/item9.png" width="350px">
+        <img src="items/item9.PNG" width="350px">
         <div class="card-body">
           <h3>Max Revive</h3>
           <button class="custom-btn2" style="margin-top: 29px;">₱59.00</button>
@@ -214,7 +214,7 @@
       </div>
 
       <div class="box">
-        <img src="items/item10.png" width="350px">
+        <img src="items/item10.PNG" width="350px">
         <div class="card-body">
           <h3>Premium Battle Pass</h3>
           <button class="custom-btn2" style="margin-top: 29px;">₱88.00</button>
@@ -222,7 +222,7 @@
       </div>
 
       <div class="box">
-        <img src="items/item11.png" width="350px">
+        <img src="items/item11.PNG" width="350px">
         <div class="card-body">
           <h3>Max Particle Pack</h3>
           <button class="custom-btn2" style="margin-top: 29px;">₱235.00</button>
